help. Navigate to topic from patient editor dialog

--- a/Diagnosis.App/Resources/Help/Hotkeys.html
+++ b/Diagnosis.App/Resources/Help/Hotkeys.html
@@ -35,7 +35,7 @@
         <h2>Содержание</h2>
         <ol>
             <li>
-                <a href="#intro">Основные</a>
+                <a href="#keyscommon">Основные</a>
             </li>
             <li>
                 <a href="#keyspatlist">Список пациентов</a>
