help. Update addhritem

--- a/Diagnosis.App/Resources/Help/Index.html
+++ b/Diagnosis.App/Resources/Help/Index.html
@@ -256,7 +256,7 @@
                             Щелкните правой кнопкой мыши любую из выделенных записей и выберите команду <strong>Удалить</strong>.
                         </p>
                     </li>
-                    <li><p>Нажмите клавишу Delete.</p></li>
+                    <li><p>Нажмите клавишу DELETE.</p></li>
                 </ul>
                 <p>Появляется сообщение «Удалено n записей». </p>
                 <p>Удаленные записи можно восстановить до перехода на другую страницу.</p>
@@ -292,9 +292,24 @@
             <div>
                 <a name="addhritem"></a>
                 <h3>Добавление элементов</h3>
-                <p>Щелкните пустое место в конце поля ввода и начните вводить текст. Пишите отдельные слова и словосочетния, разделяя их нажатием клавиши ВВОД.</p>
-                <p>При вводе текста предлагается завершение ввода словарных слов по первым буквам. Если подходящих ключевых слов нет, введенный текст будет добавлен как Комментарий.</p>
-                <p>Чтобы ввести текст как Комментарий, когда выбранно существующее ключевое слово, сначала скройте список вариантов, нажав клавишу ESC, затем нажмите клавишу ВВОД</p>
+                <p>Пишите отдельные слова и словосочетния, разделяя их нажатием клавиши ВВОД.</p>
+                <ol>
+                    <li>
+                        <p>Щелкните пустое место в конце поля ввода и начните писать текст. </p>
+                        <p>Предлагается список возможных ключевых слов.</p>
+                    </li>
+                    <li>
+                        <p>Выберите слово в списке предлагаемых ключевых слов, используя клавиши СТРЕЛКА ВВЕРХ и СТРЕЛКА ВНИЗ.</p>
+                        <p>Если подходящих ключевых слов нет, введенный текст будет добавлен как Комментарий.</p>
+                    </li>
+                    <li>
+                        <p>Для подтверждения выбранного слова нажмите клавишу ВВОД.</p>
+                        <p>Чтобы ввести текст как Комментарий, когда выбранно существующее ключевое слово, сначала скройте список, нажав клавишу ESC.</p>
+                    </li>
+                    <li>  
+                      <p>Начните ввод следующего слова.</p>
+                    </li>
+                </ol>
 
                 <p>Чтобы добавить элемент среди существующих элементов, выполните одно из следующих действий.</p>
                 <ul>
@@ -312,7 +327,7 @@
                 <ul>
                     <li>
                         <p>Нажмите клавишу ВВОД.</p>
-                        <p>Добавляется выбранное ключевое слово, фокус ввода переходит к новому элементу.</p>
+                        <p>Добавляется выбранное ключевое слово или комментарий. Фокус ввода переходит к новому элементу.</p>
                     </li>
                     <li>
                         <p>
@@ -321,7 +336,7 @@
                             Щелкните за пределами поля ввода.
                         </p>
                         <p>
-                            Если введенный текст совпадает c текстом словарного слова, выбранного в списке вариантов, добавляется это слово, иначе добавляется комментарий. Редактируемый элемент переходит в <a href="#hritemselect">состояние выделения</a>.
+                            Если введенный текст совпадает c текстом словарного слова, выбранного в списке предлагаемых слов, добавляется это слово, иначе добавляется комментарий. Редактируемый элемент переходит в <a href="#hritemselect">состояние выделения</a>.
                         </p>
                     </li>
                 </ul>
