help. Update hotkeys

--- a/Diagnosis.Client.App/Resources/Help/Hotkeys.html
+++ b/Diagnosis.Client.App/Resources/Help/Hotkeys.html
@@ -41,6 +41,9 @@
                 <a href="#keyspatlist">Список пациентов</a>
             </li>
             <li>
+                <a href="#keysnavigator">Навигатор</a>
+            </li>
+            <li>
                 <a href="#keyshrlist">Список записей</a>
             </li>
             <li>
@@ -48,6 +51,9 @@
             </li>
             <li>
                 <a href="#keysautocomplete">Ввод слов</a>
+            </li>
+            <li>
+                <a href="#keyswordlist">Словарь</a>
             </li>
             <li>
                 <a href="#keysdialogs">Работа с диалоговыми окнами</a>
@@ -116,6 +122,31 @@
             </tr>
         </table>
 
+        <a name="keysnavigator"></a>
+        <h2>Навигатор</h2>
+        <table>
+            <tr>
+                <th class="description">Действие</th>
+                <th class="keys">Клавиши</th>
+            </tr>
+            <tr>
+                <td>Редактирование выбранного пациента, курса или осмотра</td>
+                <td>F2</td>
+            </tr>
+            <tr>
+                <td>Добавление курса или осмотра</td>
+                <td>INSERT</td>
+            </tr>
+            <tr>
+                <td>Добавление записи на страницу</td>
+                <td>CTRL+ВВОД</td>
+            </tr>
+            <tr>
+                <td>Удаление выбранной страницы</td>
+                <td>DELETE</td>
+            </tr>
+        </table>
+
         <a name="keyshrlist"></a>
         <h2>Список записей</h2>
         <table>
@@ -128,12 +159,20 @@
                 <td>CTRL+ВВОД</td>
             </tr>
             <tr>
+                <td>Редактирование выбранной записи</td>
+                <td>ВВОД</td>
+            </tr>
+            <tr>
                 <td>Показ / скрытие редактора для выбранной записи</td>
                 <td>F2</td>
             </tr>
             <tr>
                 <td>Поиск по выбранным записям</td>
                 <td>CTRL+F</td>
+            </tr>
+            <tr>
+                <td>Удаление выбранных записей</td>
+                <td>DELETE</td>
             </tr>
             <tr>
                 <td>Перенос выделенных записей вверх</td>
@@ -173,7 +212,7 @@
                 <td>CTRL+K</td>
             </tr>
             <tr>
-                <td>Редактирование следующей записи CTRL+J</td>
+                <td>Редактирование следующей записи</td>
                 <td>CTRL+J</td>
             </tr>
         </table>
@@ -190,20 +229,57 @@
                 <td>ВВОД</td>
             </tr>
             <tr>
-                <td>Открытие списка предложений</td>
+                <td>Добавление выбранного предложения и добавление новой записи</td>
+                <td>CTRL+ВВОД</td>
+            </tr>
+            <tr>
+                <td>Смена уверенности в признаке</td>
+                <td>F8</td>
+            </tr>
+            <tr>
+                <td>Открытие списка предложений, затем добавление текста выбранного предложения</td>
                 <td>CTRL+ПРОБЕЛ</td>
+            </tr>
+            <tr>
+                <td>Переключение режима завершения слов</td>
+                <td>CTRL+ALT+ПРОБЕЛ</td>
             </tr>
             <tr>
                 <td>Закрытие списка предложений</td>
                 <td>ESC</td>
             </tr>
             <tr>
-                <td>Выбор вариантов в списке предположений</td>
+                <td>Выбор вариантов в списке предложений</td>
                 <td>СТРЕЛКА ВНИЗ, СТРЕЛКА ВВЕРХ</td>
             </tr>
             <tr>
                 <td>Поиск по выбранным словам</td>
                 <td>CTRL+F</td>
+            </tr>
+        </table>
+
+        <a name="keyswordlist"></a>
+        <h2>Словарь</h2>
+        <table>
+            <tr>
+                <th class="description">Действие</th>
+                <th class="keys">Клавиши</th>
+            </tr>
+            <tr>
+                <td>Добавление нового слова</td>
+                <td>CTRL+ВВОД</td>
+            </tr>
+            <tr>
+                <td>Редактирование выбранного слова</td>
+                <td>F2</td>
+            </tr>
+            <tr>
+                <td>Поиск по выбранным слова</td>
+                <td>CTRL+F</td>
+            </tr>
+            <tr>
+                <td>Удаление выбранных слов</td>
+                <td>DELETE</td>
             </tr>
         </table>
 
