--- a/Diagnosis.Client.App/Resources/Help/Index.html
+++ b/Diagnosis.Client.App/Resources/Help/Index.html
@@ -155,7 +155,7 @@
             <h2>Страницы</h2>
 
             <p>
-                В левой части экрана отображается иерархия страниц о пациенте — краткие описания пациента, его курсов и осмотров. Текущая открытая страница выделена жирным шрифтом. Последние просмотренные осмотры и курсы подсвечены светло-голубым цветом.
+                В левой части экрана отображается иерархия страниц о пациенте — краткие описания пациента, его курсов и осмотров. Текущая открытая страница выделена жирным шрифтом. Последние просмотренные осмотры и курсы подсвечены светлым цветом.
             </p>
             <p>
                 Курсы пациента сортируются от новых к старым, так что первым будет самый последний курс. Порядок сортировки осмотров курса — хронологический, от старых к новым.
@@ -292,7 +292,7 @@
             <div>
                 <a name="addhritem"></a>
                 <h3>Добавление элементов</h3>
-                <p>Пишите отдельные слова и словосочетния, разделяя их нажатием клавиши ВВОД.</p>
+                <p>Пишите отдельные слова и словосочетания, разделяя их нажатием клавиши ВВОД.</p>
                 <ol>
                     <li>
                         <p>Щелкните пустое место в конце поля ввода и начните писать текст. </p>
@@ -304,7 +304,7 @@
                     </li>
                     <li>
                         <p>Для подтверждения выбранного слова нажмите клавишу ВВОД.</p>
-                        <p>Чтобы ввести текст как Комментарий, когда выбранно существующее ключевое слово, сначала скройте список, нажав клавишу ESC.</p>
+                        <p>Чтобы ввести текст как Комментарий, когда выбрано существующее ключевое слово, сначала скройте список, нажав клавишу ESC.</p>
                     </li>
                     <li>  
                       <p>Начните ввод следующего слова.</p>
@@ -316,7 +316,7 @@
                     <li>
                         <p>Щелкните правой кнопкой мыши элемент и выберите команду <strong>Добавить слева</strong> или <strong>Добавить справа</strong>.</p>
                     </li>
-                    <li><p>Переместите добавленный элемент в нужное место после звершения ввода.</p></li>
+                    <li><p>Переместите добавленный элемент в нужное место после завершения ввода.</p></li>
                 </ul><a class="up" href="#header">К содержанию</a>
             </div>
 
@@ -372,7 +372,7 @@
 
                 <p>Чтобы редактировать элемент, щелкните область текста элемента. Элементы типа МКБ или Измерение редактируются после двойного щелчка. </p>
                 <p>Чтобы редактировать уже выделенный элемент, можно нажать клавишу F2.</p>
-                <p class="hint-box">Когда запись открывается двойным щелчоком, редактируется последний (пустой) элемент.</p>
+                <p class="hint-box">Когда запись открывается двойным щелчком, редактируется последний (пустой) элемент.</p>
 
                 <a class="up" href="#header">К содержанию</a>
             </div>
