help. Updates, add hrview, hrmove, hritemmove, addword

--- a/Diagnosis.Client.App/Resources/Help/Index.html
+++ b/Diagnosis.Client.App/Resources/Help/Index.html
@@ -57,6 +57,12 @@
                             <a href="#hrselect">Выделение записей</a>
                         </li>
                         <li>
+                            <a href="#hrview">Изменение представления записей</a>
+                        </li>
+                        <li>
+                            <a href="#hrmove">Изменение порядка записей</a>
+                        </li>
+                        <li>
                             <a href="#hrcopy">Копирование и вставка записей</a>
                         </li>
                         <li>
@@ -83,11 +89,25 @@
                             <a href="#hritemselect">Выделение и редактирование элементов</a>
                         </li>
                         <li>
+                            <a href="#hritemmove">Перемещение элементов</a>
+                        </li>
+                        <li>
                             <a href="#hritemtype">Изменение типа элемента записи</a>
                         </li>
                         <li>
                             <a href="#hrdate">Дата записи</a>
                         </li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#words">Ключевые слова</a>
+                    <ul>
+                        <li>
+                            <a href="#addword">Добавление ключевых слов</a>
+                        </li>
+                        <!--<li>
+                            <a href="#addvocabulary">Добавление словарей</a>
+                        </li>-->
                     </ul>
                 </li>
             </ol>
@@ -112,7 +132,7 @@
                     </li>
                     <li><p>Заполните известные данные.</p></li>
                     <li>
-                        <p>Нажмите кнопку <strong>Добавить</strong>.
+                        <p>Нажмите кнопку <strong>Далее</strong>.
                         <p>
                             Для нового пациента создаётся курс и осмотр в нем. Откроется страница первого осмотра.
                         </p>
@@ -161,7 +181,7 @@
                 Курсы пациента сортируются от новых к старым, так что первым будет самый последний курс. Порядок сортировки осмотров курса — хронологический, от старых к новым.
             </p>
 
-            <p>На странице есть заголовок и список записей. Вы можете <a href="#addhr">добавлять</a> новые записи, <a href="#hrcopy">копировать и вставлять</a> записи с этой же или другой страницы, <a href="#hrdelete">удалять</a> записи.</p>
+            <p>На странице есть заголовок и список записей. Вы можете <a href="#addhr">добавлять</a> новые записи, <a href="#hrcopy">копировать и вставлять</a> записи с этой же или другой страницы, <a href="#hrdelete">удалять</a> записи, <a href="#hrview">менять представление</a> записей.</p>
 
             <div>
                 <a name="editholder"></a>
@@ -182,7 +202,7 @@
                     <li><p>Откройте страницу, на которой нужно добавить запись.</p></li>
                     <li>
                         <p>
-                            На панели инструментов нажмите кнопку <strong>Добавить</strong>.
+                            На панели инструментов нажмите кнопку <strong>Новая запись</strong>.
                             <br />-или-
                             <br />Нажмите клавиши CTRL+ВВОД.
                         </p>
@@ -216,12 +236,69 @@
                     </li>
                 </ul>
 
-                <p>Чтобы выбрать несколько последовательных записей, щелкните первую из них, нажмите клавишу SHIFT, а затем щелкните последнюю.</p>
-                <p>Чтобы выбрать несколько непоследовательных записей, нажмите клавишу CTRL и, удерживая ее, щелкните каждую из необходимых записей.</p>
+                <p>Чтобы выбрать несколько последовательных записей, щелкните первую из них, нажмите клавишу SHIFT, а затем щелкните последнюю. Или перемещайте указатель, удерживая нажатой левую кнопку мыши. Появится рамка выделения. Обведите все записи, которые нужно выделить.</p>
+                <p>Чтобы выбрать несколько непоследовательных записей, нажмите клавишу CTRL и, удерживая ее, щелкните каждую из записей.</p>
+                Чтобы быстро выделить все записи на странице, нажмите клавиши CTRL+A.
                 <p class="hint-box">При повторном открытии страницы выделена последняя выбранная запись на этой странице.</p>
                 <a class="up" href="#header">К содержанию</a>
             </div>
+            <div>
+                <a name="hrview"></a>
+                <h3>Изменение представления записей</h3>
 
+                <p>Порядок записей на странице определяется сортировкой и группировкой.</p>
+                <p>Записи сортируются:</p>
+                <ul>
+                    <li>
+                        <p>По порядку</p>
+                    </li>
+                    <li>
+                        <p>По разделу</p>
+                    </li>
+                    <li>
+                        <p>По дате события в записи</p>
+                    </li>
+                    <li>
+                        <p>По дате создания записи</p>
+                    </li>
+                </ul>
+                <p>Записи группируются:</p>
+                <ul>
+                    <li>
+                        <p>По разделу</p>
+                    </li>
+                    <li>
+                        <p>По дате создания записи</p>
+                    </li>
+                    <li>
+                        <p>Не группируются</p>
+                    </li>
+                </ul>
+                <p>В режиме сортировки по разделу или по дате создания у каждой записи отображается раздел или дата создания (если нет группировки по тому же свойству).</p>
+                <p>В режиме сортировки по порядку возможно <a href="#hrmove">изменение порядка</a> записей вручную.</p>
+                <p class="hint-box">Если навести указатель мыши на запись, всплывающая подсказка сообщает раздел, даты создания и изменения, автора записи.</p>
+                <a class="up" href="#header">К содержанию</a>
+            </div>
+            <div>
+                <a name="hrmove"></a>
+                <h3>Перемещение записей</h3>
+                <p>Чтобы переместить выделенные записи выше или ниже в списке записей, <a href="#hrview">отсортируйте</a> список записей по порядку и выполните одно из следующих действий.</p>
+                <ul>
+                    <li>
+                        <p>Удерживая нажатой кнопку мыши, перетащите выделенные записи вверх или вниз.</p>
+                    </li>
+                    <li>
+                        <p>Щелкните правой кнопкой мыши по выделенным записям и выберите команду <strong>Вверх</strong> или <strong>Вниз</strong>.</p>
+                    </li>
+                    <li>
+                        <p>Нажмите клавиши ALT+SHIFT+СТРЕЛКА ВВЕРХ или ALT+SHIFT+СТРЕЛКА ВНИЗ.</p>
+                    </li>
+                </ul>
+
+                <!--Чтобы переместить записи в другой список, перетащите их на заголовок в навигаторе.-->
+
+                <a class="up" href="#header">К содержанию</a>
+            </div>
             <div>
                 <a name="hrcopy"></a>
                 <h3>Копирование и вставка записей</h3>
@@ -296,38 +373,47 @@
                 <ol>
                     <li>
                         <p>Щелкните пустое место в конце поля ввода и начните писать текст. </p>
-                        <p>Предлагается список возможных ключевых слов.</p>
+                        <p>Предлагается список ключевых слов для завершения.</p>
                     </li>
                     <li>
                         <p>Выберите слово в списке предлагаемых ключевых слов, используя клавиши СТРЕЛКА ВВЕРХ и СТРЕЛКА ВНИЗ.</p>
-                        <p>Если подходящих ключевых слов нет, введенный текст будет добавлен как Комментарий.</p>
+                        <p>Если подходящих ключевых слов нет, введенный текст будет добавлен как Комментарий. </p>
                     </li>
                     <li>
-                        <p>Для подтверждения выбранного слова нажмите клавишу ВВОД.</p>
-                        <p>Чтобы ввести текст как Комментарий, когда выбрано существующее ключевое слово, сначала скройте список, нажав клавишу ESC.</p>
+                        <p>Для подтверждения выбранного слова и <a href="#autocompleteenter">завершения ввода</a> нажмите клавишу ВВОД.</p>
+                        <p>Чтобы вставить текст выбранного слова без завершения ввода, нажмите клавиши CTRL+ПРОБЕЛ.</p>
+                        <p>Чтобы ввести текст как Комментарий, когда выбрано слово в списке предложений, сначала скройте список, нажав клавишу ESC. Список можно открыть повторно, продолжив ввод текста или нажав клавиши CTRL+ПРОБЕЛ.</p>
                     </li>
-                    <li>  
-                      <p>Начните ввод следующего слова.</p>
+                    <li>
+                        <p>Начните ввод следующего слова.</p>
                     </li>
                 </ol>
+                <p>
+                    Чтобы добавить текст, для которого не нашлось подходящего словарного слова, как новое ключевое слово, переключите <a href="#autocompleteenter">режим завершения ввода</a> слов или используйте клавишу SHIFT при завершении ввода.
+                </p>
 
                 <p>Чтобы добавить элемент среди существующих элементов, выполните одно из следующих действий.</p>
                 <ul>
                     <li>
                         <p>Щелкните правой кнопкой мыши элемент и выберите команду <strong>Добавить слева</strong> или <strong>Добавить справа</strong>.</p>
                     </li>
-                    <li><p>Переместите добавленный элемент в нужное место после завершения ввода.</p></li>
-                </ul><a class="up" href="#header">К содержанию</a>
+                    <li><p><a href="#hritemmove">Переместите</a> добавленный элемент в нужное место после завершения ввода.</p></li>
+                </ul>
+                <a class="up" href="#header">К содержанию</a>
             </div>
 
             <div>
                 <a name="autocompleteenter"></a>
                 <h3>Завершение ввода текста</h3>
-                <p>Для завершения ввода выполните одно из следующих действий.</p>
+                <p>Для завершения ввода в элемент записи выполните одно из следующих действий.</p>
                 <ul>
                     <li>
                         <p>Нажмите клавишу ВВОД.</p>
                         <p>Добавляется выбранное ключевое слово или комментарий. Фокус ввода переходит к новому элементу.</p>
+                    </li>
+                    <li>
+                        <p>Нажмите клавиши SHIFT+ВВОД.</p>
+                        <p>Добавляется комментарий с текстом выбранного ключевого слова или новое ключевое слово. Фокус ввода переходит к новому элементу.</p>
                     </li>
                     <li>
                         <p>
@@ -339,6 +425,31 @@
                             Если введенный текст совпадает c текстом словарного слова, выбранного в списке предлагаемых слов, добавляется это слово, иначе добавляется комментарий. Редактируемый элемент переходит в <a href="#hritemselect">состояние выделения</a>.
                         </p>
                     </li>
+                </ul>
+                <p>Редактор элемента записи поддерживает два режима завершения ввода слов: режим завершения и режим предложений. В режиме завершения предлагаются только существующие ключевые слова. В режиме предложений любой напечатанный текст можно добавить как ключевое слово.</p>
+
+                <p>Для переключения режима завершения ввода слов выполните одно из следующих действий.</p>
+                <ul>
+                    <li>
+                        <p>Нажмите клавиши CTRL+ALT+ПРОБЕЛ.</p>
+                    </li>
+                    <li>
+                        <p>Нажмите кнопку на панели инструментов редактора записи.</p>
+                    </li>
+                </ul>
+                <p>
+                   Элементы меняют внешний вид в соответствии с типом:
+                </p>
+                <ul>
+                    <li>
+                        <p>Новые ключевые слова выделяются зеленым цветом.</p>
+                    </li>
+                    <li>
+                        <p>Комментарии — курсивом.</p>
+                    </li>
+                    <!--<li>
+                        <p>Измерения — курсивом</p>
+                    </li>-->
                 </ul>
                 <a class="up" href="#header">К содержанию</a>
             </div>
@@ -366,7 +477,7 @@
             <div>
                 <a name="hritemselect"></a>
                 <h3>Выделение и редактирование элементов</h3>
-                <p>Выбранный элемент записи находится в состоянии выделения или редактирования. Выделенные элементы можно перемещать, копировать, удалять, отправлять в поиск.</p>
+                <p>Выбранный элемент записи находится в состоянии выделения или редактирования. Выделенные элементы можно <a href="#hritemmove">перемещать</a>, копировать, удалять, отправлять в поиск.</p>
                 <p class="hint-box">Нельзя переместить последний (пустой) элемент в поле ввода.</p>
                 <p>Чтобы выделить элемент, щелкните область слева от текста элемента.</p>
 
@@ -374,6 +485,14 @@
                 <p>Чтобы редактировать уже выделенный элемент, можно нажать клавишу F2.</p>
                 <p class="hint-box">Когда запись открывается двойным щелчком, редактируется последний (пустой) элемент.</p>
 
+                <a class="up" href="#header">К содержанию</a>
+            </div>
+
+            <div>
+                <a name="hritemmove"></a>
+                <h3>Перемещение элементов</h3>
+                <p>Наведите указатель мыши на область слева от текста элемента. Когда указатель примет вид <img src="img\move.png" alt="Крестообразная стрелка" width="16" height="16" />, переместите элемент в нужное место.</p>
+                <!--<p>Можно перемещать элементы </p>-->
                 <a class="up" href="#header">К содержанию</a>
             </div>
 
@@ -431,14 +550,42 @@
 
                 <p>При вводе давности события учитывайте, что фактическая дата рассчитывается относительно даты создания записи. По этой же причине после копирования записи значение давности может измениться (копируется фактическая дата события).</p>
 
-                <p class="hint-box">Чтобы увидеть дату создания, наведите указатель мыши на запись или отсортируйте список записей по дате создания. Дату создания записи нельзя изменить. При копировании записей дата создания меняется на текущую дату.</p>
+                <p class="hint-box">Чтобы увидеть дату создания, наведите указатель мыши на запись или <a href="#hrview">отсортируйте</a> список записей по дате создания. Дату создания записи нельзя изменить. При копировании записей дата создания меняется на текущую дату.</p>
 
                 <a class="up" href="#header">К содержанию</a>
             </div>
         </div>
-    </div>
-    <div id="footer">
-        Дата изменения: 23.02.2015
-    </div>
+        <div>
+            <a name="words"></a>
+            <h2>Ключевые слова</h2>
+            <p>
+                Ключевые слова — термины, которые используются для поиска и анализа записей.
+            </p>
+            <div>
+                <a name="addword"></a>
+                <h3>Добавление ключевых слов</h3>
+                <ol>
+                    <li>
+                        <p>Нажмите <strong>Словарь</strong>.</p>
+                    </li>
+                    <li>
+                        <p>Введите слово в строке фильтра. Если похожее слово уже есть в словаре, вы увидите его в списке.</p>
+                    </li>
+                    <li>
+                        <p>
+                            Нажмите кнопку <strong>Добавить</strong> на панели инструментов.
+                            <br />-или-
+                            <br />Нажмите клавиши CTRL+ВВОД.
+                        </p>
+                        <p>Откроется редактор слова. Ключевые слова ограничены по длине 100 символами, включая пробелы, и не могут содержать переносы строк.</p>
+                    </li>
+                </ol>
+                <p>Ключевые слова можно добавлять и во время <a href="#addhritem">редактирования элемента записи</a>.</p>
+                <a class="up" href="#header">К содержанию</a>
+            </div>
+        </div>
+        <div id="footer">
+            Дата изменения: 23.02.2015
+        </div>
 </body>
 </html>
