--- a/Diagnosis.Client.App/Resources/Help/Index.html
+++ b/Diagnosis.Client.App/Resources/Help/Index.html
@@ -117,7 +117,7 @@
             <a name="common"></a>
             <h2>Начало работы</h2>
             <p>
-                Записи о пациентах располагаются на <a href="#card">страницах</a>. С каждым пациентом может быть связано несколько страниц, организованных иерархически — про пациента, курс лечения, осмотр.
+                <a href="#hreditor">Записи</a> о пациентах располагаются на <a href="#card">страницах</a>. С каждым пациентом может быть связано несколько страниц, организованных иерархически — про пациента, курс лечения, осмотр.
             </p>
 
             <div>
@@ -238,7 +238,7 @@
 
                 <p>Чтобы выбрать несколько последовательных записей, щелкните первую из них, нажмите клавишу SHIFT, а затем щелкните последнюю. Или перемещайте указатель, удерживая нажатой левую кнопку мыши. Появится рамка выделения. Обведите все записи, которые нужно выделить.</p>
                 <p>Чтобы выбрать несколько непоследовательных записей, нажмите клавишу CTRL и, удерживая ее, щелкните каждую из записей.</p>
-                Чтобы быстро выделить все записи на странице, нажмите клавиши CTRL+A.
+                <p>Чтобы быстро выделить все записи на странице, нажмите клавиши CTRL+A.</p>
                 <p class="hint-box">При повторном открытии страницы выделена последняя выбранная запись на этой странице.</p>
                 <a class="up" href="#header">К содержанию</a>
             </div>
