ui. Add ICD and Measure hotkeys
--HG--
branch : f/DateOffsetModel

--- a/Diagnosis.Client.App/Resources/Help/Hotkeys.html
+++ b/Diagnosis.Client.App/Resources/Help/Hotkeys.html
@@ -237,6 +237,14 @@
                 <td>F8</td>
             </tr>
             <tr>
+                <td>Добавление МКБ</td>
+                <td>CTRL+3</td>
+            </tr>
+            <tr>
+                <td>Добавление измерения</td>
+                <td>CTRL+4</td>
+            </tr>
+            <tr>
                 <td>Открытие списка предложений, затем добавление текста выбранного предложения</td>
                 <td>CTRL+ПРОБЕЛ</td>
             </tr>
