ui. Change tag type hotkeys
--HG--
branch : f/DateOffsetModel

--- a/Diagnosis.Client.App/Resources/Help/Hotkeys.html
+++ b/Diagnosis.Client.App/Resources/Help/Hotkeys.html
@@ -264,6 +264,22 @@
                 <td>Поиск по выбранным словам</td>
                 <td>CTRL+F</td>
             </tr>
+            <tr>
+                <td>Смена типа выбранного элемента на слово</td>
+                <td>CTRL+ALT+1</td>
+            </tr>
+            <tr>
+                <td>Смена типа выбранного элемента на комментарий</td>
+                <td>CTRL+ALT+2</td>
+            </tr>
+            <tr>
+                <td>Смена типа выбранного элемента на МКБ</td>
+                <td>CTRL+ALT+3</td>
+            </tr>
+            <tr>
+                <td>Смена типа выбранного элемента на измерение</td>
+                <td>CTRL+ALT+4</td>
+            </tr>
         </table>
 
         <a name="keyswordlist"></a>
