hreditor. AddCommand toolbar buttons

--- a/Diagnosis.Client.App/Resources/Help/Hotkeys.html
+++ b/Diagnosis.Client.App/Resources/Help/Hotkeys.html
@@ -237,6 +237,14 @@
                 <td>F8</td>
             </tr>
             <tr>
+                <td>Добавление слова</td>
+                <td>CTRL+1</td>
+            </tr>
+            <tr>
+                <td>Добавление комментария</td>
+                <td>CTRL+2</td>
+            </tr>
+            <tr>
                 <td>Добавление МКБ</td>
                 <td>CTRL+3</td>
             </tr>
@@ -349,7 +357,7 @@
         </table>
     </div>
     <div id="footer">
-        Дата изменения: 23.02.2015
+        Дата изменения: 25.05.2015
     </div>
 </body>
 </html>
