--- a/Diagnosis.Client.App/Resources/Help/Index.html
+++ b/Diagnosis.Client.App/Resources/Help/Index.html
@@ -260,6 +260,9 @@
                     <li>
                         <p>По дате события в записи</p>
                     </li>
+                  <li>
+                    <p>По дате описания события записи</p>
+                  </li>
                     <li>
                         <p>По дате создания записи</p>
                     </li>
@@ -614,7 +617,7 @@
             </div>
         </div>
         <div id="footer">
-            Дата изменения: 23.02.2015
+            Дата изменения: 15.05.2015
         </div>
 </body>
 </html>
