--- a/Diagnosis.Client.App/Resources/Help/Index.html
+++ b/Diagnosis.Client.App/Resources/Help/Index.html
@@ -51,7 +51,7 @@
                             <a href="#editholder">Редактирование пациента, курса или осмотра</a>
                         </li>
                         <li>
-                            <a href="#addhr">Добавление запсией</a>
+                            <a href="#addhr">Добавление записей</a>
                         </li>
                         <li>
                             <a href="#hrselect">Выделение записей</a>
@@ -252,31 +252,31 @@
                 <p>Записи сортируются:</p>
                 <ul>
                     <li>
-                        <p>По порядку</p>
+                        <p>по порядку</p>
                     </li>
                     <li>
-                        <p>По разделу</p>
+                        <p>по разделу</p>
                     </li>
                     <li>
-                        <p>По дате события в записи</p>
+                        <p>по дате события в записи</p>
                     </li>
                   <li>
-                    <p>По дате описания события записи</p>
+                    <p>по дате описания события записи</p>
                   </li>
                     <li>
-                        <p>По дате создания записи</p>
+                        <p>по дате создания записи</p>
                     </li>
                 </ul>
                 <p>Записи группируются:</p>
                 <ul>
                     <li>
-                        <p>По разделу</p>
+                        <p>по разделу</p>
                     </li>
                     <li>
-                        <p>По дате создания записи</p>
+                        <p>по дате создания записи</p>
                     </li>
                     <li>
-                        <p>Не группируются</p>
+                        <p>не группируются</p>
                     </li>
                 </ul>
                 <p>В режиме сортировки по разделу или по дате создания у каждой записи отображается раздел или дата создания (если нет группировки по тому же свойству).</p>
